--- a/hmmer/templates/subtypes.html
+++ b/hmmer/templates/subtypes.html
@@ -10,6 +10,7 @@
 {% block body %}
 
 <div class="container">
+    <div class="row">
     <div class="col-sm-12">
         <h2><a href="#" %}">{{ title }}</a></h2>
         {% if counts %}
@@ -39,6 +40,7 @@
         <p>No Data Available</p>
         {% endif %}
     </div>
+</div>
 </div>
 
 {% endblock %}
