--- a/hmmer/templates/navbar/navbar.html
+++ b/hmmer/templates/navbar/navbar.html
@@ -6,9 +6,8 @@
 {% url 'shortnew' id as shortnew %}
 
 {% load custom_filters %}
-
 <!-- Responsive navbar -->
-<div class="container">
+<div class="container" id="navigation">
     <div class="navbar navbar-inverse navbar-static" role="navigation">
         <div class="navbar-inner">
             <div class="container">
@@ -17,15 +16,15 @@
                         <!-- Display three horizontal lines when navbar collapsed. -->
                         <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">SymTyper</a>
+                        <a class="navbar-brand" href="{{ form }}">SymTyper</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         {% if not done %}
-                        <li{% if request.path == documentation %}  class="active"{% endif %}><a href="#">Documentation</a></li>
-                        <li{% if request.path == contact %}  class="active"{% endif %}><a href="#">Contact</a></li>
+                        <li{% if request.path == documentation %} class="active"{% endif %}><a href="#">Documentation</a></li>
+                        <li{% if request.path == contact %} class="active"{% endif %}><a href="#">Contact</a></li>
                         {% else %}
-                        <li{% if request.path == index %}  class="active"{% endif %}><a href="{{ index }}">Home</a></li>
+                        <li{% if request.path == index %} class="active"{% endif %}><a href="{{ index }}">Home</a></li>
                         <li{% if request.path == clades %} class="active"{% endif %}><a href="{{ clades }}">Clades</a></li>
                         <li class="dropdown{% if request.path == subtypes %} active {% endif %}">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Subtypes <b class="caret"></b></a>
@@ -53,12 +52,12 @@
                         </li>
                     {% endif %}
                     </ul>
-                    {% if id %}
-                    <ul class="nav navbar-nav pull-right">
-                        <li class="divider-vertical"></li>
-                        <li><a href="{{ form }}">Upload</a></li>
-                    </ul>
-                    {% endif %}
+                    <!--{% if id %}-->
+                    <!--<ul class="nav navbar-nav pull-right">-->
+                        <!--<li class="divider-vertical"></li>-->
+                        <!--<li><a href="{{ form }}">Upload</a></li>-->
+                    <!--</ul>-->
+                    <!--{% endif %}-->
                 </div>
             </div>
         </div>
