--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap-lightbox.min.css">
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css">
+        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto+Slab|Roboto">
 
         <!--<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.fancybox.pack.js"></script>-->
         <script src="http://code.jquery.com/jquery.min.js"></script>
@@ -22,8 +23,8 @@
     </head>
 
     <body>
-        <div class="container">
-            <div class="header"></div>
+        <div class="container" id="header">
+            <h1 class="header"></h1>
         </div>
         {% navbar id %}
         {% block navbar %}{%endblock %}
