--- a/hmmer/templates/navbar/navbar.html
+++ b/hmmer/templates/navbar/navbar.html
@@ -21,7 +21,7 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         {% if not done %}
-                        <li{% if request.path == documentation %} class="active"{% endif %}><a href="#">Documentation</a></li>
+                        <li{% if request.path == documentation %} class="active"{% endif %}><a href="https://github.com/bingo11/symTyper/wiki/documentation">Documentation</a></li>
                         <li{% if request.path == contact %} class="active"{% endif %}><a href="#">Contact</a></li>
                         {% else %}
                         <li{% if request.path == index %} class="active"{% endif %}><a href="{{ index }}">Home</a></li>
@@ -50,6 +50,7 @@
                             {% endfor %}
                         </ul>
                         </li>
+                        <li{% if request.path == biome %} class="active"{% endif %}><a href="{{ biome }}">Biome</a></li>
                     {% endif %}
                     </ul>
                     <!--{% if id %}-->
